--- a/package.json
+++ b/package.json
@@ -40,7 +40,10 @@
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.5",
     "@babel/preset-react": "^7.16.5",
-    "eslint": "^9.0.0",
+    "@eslint/js": "^9.1.1",
+    "eslint": "^9.1.1",
+    "eslint-plugin-react": "^7.34.1",
+    "globals": "^15.0.0",
     "jsdoc": "^4.0.2",
     "react-scripts": "5.0.0"
   },
